<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupimg"
    tools:context="swetha.sample.dhanvanthraya.authentication.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="200dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                android:background="@drawable/green_border"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email_signup"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:autofillHints="emailAddress">

            </EditText>

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/signup_password"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_border"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:autofillHints="password" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/signup_confirm"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_border"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:autofillHints="password" />

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:textColor="#384744"
                app:cornerRadius = "30dp"
                android:backgroundTint="#BF9F88"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/already_an_user_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>